--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,15 @@
 {
   "name": "vue-project",
+  "homepage":"https://LaySopanha.github.io/BaiCanteen/",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.9",
